Fixed padding for other pages on mobile

--- a/styles.css
+++ b/styles.css
@@ -199,7 +199,7 @@ p a {
     }
 
     #tabs a {
-        padding: 8px 0; /* More vertical padding for clickable area */
+        padding: 4px; 
         text-align: center; /* Center each navigation link */
         width: 100%; /* Make each link take full width */
         font-size: 16px; /* Slightly smaller font size for tabs */
